# scitex-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  skills-lock.json
.github/workflows/: release.yml
docs/: 2026-05-27-命令参考.md  biolab-cli-update-plan.md  installation-guide.md  命令参考.md
skills/biolab-admin/: SKILL.md
skills/biolab-api/: SKILL.md
skills/biolab-api/references/: inventory.md  lab.md  orders.md  templates.md  users.md
skills/biolab-error-report/: SKILL.md
skills/biolab-evo/: SKILL.md
skills/biolab-evo/agents/: openai.yaml
skills/biolab-inventory/: SKILL.md
skills/biolab-shared/: SKILL.md
skills/biolab-task/: SKILL.md
src/: api_response.rs  auth.rs  client.rs  config.rs  error_history.rs  errors.rs  http.rs  lib.rs  main.rs  output.rs  types.rs
src/commands/: admin.rs  error_report.rs  inventory.rs  mod.rs  orders.rs  skills.rs  tasks.rs  update.rs
src/services/: admin.rs  error_reports.rs  helpers.rs  inventory.rs  lab.rs  mod.rs  orders.rs  tasks.rs  templates.rs  users.rs
tests/: admin_task_types_live.rs  openapi_contract.rs
tests/fixtures/: openapi.json
