[package]
name = "biolab-cli"
version = "0.4.5"
edition = "2021"
description = "CLI client for the Biolab order system (primer synthesis + sequencing), inventory, and lab management"

[[bin]]
name = "biolab"
path = "src/main.rs"

[lib]
name = "biolab"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
thiserror = "2"
colored = "3"
url = "2"
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[profile.release]
strip = true
lto = true
